// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageView component snapshot 1`] = `
<div
  className="ImageViewOuterContainer"
>
  <div
    className="ImageViewInnerContainer"
  >
    <div
      className="ImageViewCore"
    >
      <img
        alt="This is a caption"
        className="ImageViewImg"
        src="somesite.com/image.png"
        style={
          Object {
            "height": 640,
            "width": 640,
          }
        }
      />
      <div
        data-testid="ImageViewComponentCaptionPart"
      >
        <div
          className="CaptionContainer"
          data-testid="CaptionComponentTestId"
          style={
            Object {
              "width": 640,
            }
          }
        >
          <div
            className="IconContainer"
          >
            <i
              aria-hidden="true"
              className="image icon"
              onClick={[Function]}
            />
          </div>
          <p
            className="ContentPageCaptionTextSize CaptionText"
          >
            This is a caption
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageView component with image credit string snapshot 1`] = `
<div
  className="ImageViewOuterContainer"
>
  <div
    className="ImageViewInnerContainer"
  >
    <div
      className="ImageViewCore"
    >
      <img
        alt="This is a caption (Image credit: Image God)"
        className="ImageViewImg"
        src="somesite.com/image.png"
        style={
          Object {
            "height": 640,
            "width": 640,
          }
        }
      />
      <div
        data-testid="ImageViewComponentCaptionPart"
      >
        <div
          className="CaptionContainer"
          data-testid="CaptionComponentTestId"
          style={
            Object {
              "width": 640,
            }
          }
        >
          <div
            className="IconContainer"
          >
            <i
              aria-hidden="true"
              className="image icon"
              onClick={[Function]}
            />
          </div>
          <p
            className="ContentPageCaptionTextSize CaptionText"
          >
            This is a caption (Image credit: Image God)
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
